--- a/src/app/modules/main/components/users-table/users-table.component.html
+++ b/src/app/modules/main/components/users-table/users-table.component.html
@@ -1,3 +1,10 @@
-<p>
-  users-table works!
-</p>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="users">
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef>Title</th>
+      <td mat-cell *matCellDef="let row">{{ row.firstName }}</td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
