--- a/src/app/modules/main/components/users-table/users-table.component.html
+++ b/src/app/modules/main/components/users-table/users-table.component.html
@@ -1,3 +1,5 @@
+<p class="table-title">Users List</p>
+
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="users">
     <ng-container matColumnDef="title">
