--- a/src/app/modules/main/components/users-table/users-table.component.html
+++ b/src/app/modules/main/components/users-table/users-table.component.html
@@ -1,10 +1,33 @@
 <p class="table-title">Users List</p>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 table-wrapper">
   <table mat-table [dataSource]="users">
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Title</th>
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef>First Name</th>
       <td mat-cell *matCellDef="let row">{{ row.firstName }}</td>
+    </ng-container>
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef>Last Name</th>
+      <td mat-cell *matCellDef="let row">{{ row.lastName }}</td>
+    </ng-container>
+    <ng-container matColumnDef="age">
+      <th mat-header-cell *matHeaderCellDef>Age</th>
+      <td mat-cell *matCellDef="let row">{{ row.age }}</td>
+    </ng-container>
+    <ng-container matColumnDef="faculty">
+      <th mat-header-cell *matHeaderCellDef>Faculty</th>
+      <td mat-cell *matCellDef="let row">{{ row.faculty }}</td>
+    </ng-container>
+    <ng-container matColumnDef="controls">
+      <th mat-header-cell *matHeaderCellDef>Controls</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-mini-fab color="accent" class="control-btn" (click)="deleteUser(row.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-mini-fab color="accent" class="control-btn" (click)="openUserModal(row)">
+          <mat-icon>open_in_new</mat-icon>
+        </button>
+      </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
