--- a/src/app/modules/main/components/users-table/users-table.component.sass
+++ b/src/app/modules/main/components/users-table/users-table.component.sass
@@ -1,3 +1,12 @@
-.table-title
-  text-align: center
-  margin: 20px 0
+\:host
+  .table-title
+    text-align: center
+    margin: 20px 0
+  .table-wrapper
+    display: flex
+    flex-direction: column
+    flex: 1
+    table
+      width: 100%
+  .control-btn
+    margin-right: 8px
