--- a/src/app/modules/main/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/main/components/new-user-form/new-user-form.component.html
@@ -21,5 +21,7 @@
 
   </div>
 
-  <button mat-raised-button color="accent" (click)="save()">Save</button>
+  <button mat-raised-button color="accent"
+          [disabled]="!filtersFormGroup?.valid"
+          (click)="save()">Save</button>
 </form>
